--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.1.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
